libs/@local/hashql/hir/tests/ui/reify/underscore.jsonc
//@ run: fail
//@ description: Underscore is no longer valid
"_"
//~^ ERROR `_` not allowed here
